; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_imath.c_mp_int_to_uint.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_imath.c_mp_int_to_uint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_NEG = common dso_local global i64 0, align 8
@MP_USMALL_MAX = common dso_local global i32 0, align 4
@MP_RANGE = common dso_local global i32 0, align 4
@MP_DIGIT_BIT = common dso_local global i32 0, align 4
@MP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_int_to_uint(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @MP_SIGN(i32* %14)
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* @MP_NEG, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %24, label %19

19:                                               ; preds = %2
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* @MP_USMALL_MAX, align 4
  %22 = call i64 @mp_int_compare_uvalue(i32* %20, i32 %21)
  %23 = icmp sgt i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19, %2
  %25 = load i32, i32* @MP_RANGE, align 4
  store i32 %25, i32* %3, align 4
  br label %60

26:                                               ; preds = %19
  %27 = load i32*, i32** %4, align 8
  %28 = call i64 @MP_USED(i32* %27)
  store i64 %28, i64* %7, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i32* @MP_DIGITS(i32* %29)
  %31 = load i64, i64* %7, align 8
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  %33 = getelementptr inbounds i32, i32* %32, i64 -1
  store i32* %33, i32** %8, align 8
  store i32 0, i32* %9, align 4
  br label %34

34:                                               ; preds = %37, %26
  %35 = load i64, i64* %7, align 8
  %36 = icmp sgt i64 %35, 0
  br i1 %36, label %37, label %52

37:                                               ; preds = %34
  %38 = load i32, i32* @MP_DIGIT_BIT, align 4
  %39 = sdiv i32 %38, 2
  %40 = load i32, i32* %9, align 4
  %41 = shl i32 %40, %39
  store i32 %41, i32* %9, align 4
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* @MP_DIGIT_BIT, align 4
  %44 = sdiv i32 %43, 2
  %45 = shl i32 %42, %44
  %46 = load i32*, i32** %8, align 8
  %47 = getelementptr inbounds i32, i32* %46, i32 -1
  store i32* %47, i32** %8, align 8
  %48 = load i32, i32* %46, align 4
  %49 = or i32 %45, %48
  store i32 %49, i32* %9, align 4
  %50 = load i64, i64* %7, align 8
  %51 = add nsw i64 %50, -1
  store i64 %51, i64* %7, align 8
  br label %34

52:                                               ; preds = %34
  %53 = load i32*, i32** %5, align 8
  %54 = icmp ne i32* %53, null
  br i1 %54, label %55, label %58

55:                                               ; preds = %52
  %56 = load i32, i32* %9, align 4
  %57 = load i32*, i32** %5, align 8
  store i32 %56, i32* %57, align 4
  br label %58

58:                                               ; preds = %55, %52
  %59 = load i32, i32* @MP_OK, align 4
  store i32 %59, i32* %3, align 4
  br label %60

60:                                               ; preds = %58, %24
  %61 = load i32, i32* %3, align 4
  ret i32 %61
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @MP_SIGN(i32*) #1

declare dso_local i64 @mp_int_compare_uvalue(i32*, i32) #1

declare dso_local i64 @MP_USED(i32*) #1

declare dso_local i32* @MP_DIGITS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
